add query caching and mutations, add balance request page
