# src/Web/wwwroot/swagger/v1/swagger.json
@@ -33,7 +33,17 @@
         "operationId": "GetBalanceRequests",
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BalanceRequestDto"
+                  }
+                }
+              }
+            }
           }
         }
       },
@@ -548,6 +558,28 @@
         },
         "additionalProperties": false
       },
+      "BalanceRequestDto": {
+        "required": [
+          "amount",
+          "id",
+          "user"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "user": {
+            "$ref": "#/components/schemas/UserDto"
+          },
+          "amount": {
+            "type": "number",
+            "format": "double"
+          }
+        },
+        "additionalProperties": false
+      },
       "CreateBalanceRequestCommand": {
         "required": [
           "amount"
@@ -730,6 +762,9 @@
             "items": {
               "type": "string"
             }
+          },
+          "balance": {
+            "$ref": "#/components/schemas/BalanceDto"
           }
         },
         "additionalProperties": false
